[package]
name = "rust_craft"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.26.0"

vulkano = "0.23.0"
vulkano-shaders = "0.23.0"
vulkano-win = "0.23.0"

log = "0.4.14"
log4rs = { version = "1.0.0", features = [
    "console_appender",
    "file_appender",
    "pattern_encoder",
    "json_encoder",
] }
